<resources>
    <string name="app_name">travelsAgency</string>
    <string name="title">Travels Agency</string>
    <string name="subtitle">Inicia sesión</string>
    <string name="btnIniciar">LOGIN</string>
    <string name="btnReg">SIGN UP</string>
    <string name="edtxt_name_user">User</string>
    <string name="edtxt_pwd">Password</string>
    <string name="edtxt_email">Email</string>
    <string name="edtxt_rfc">RFC</string>
    <string name="edtxt_role">Role</string>
    <string name="edtxt_tel">Telephone</string>
    <string name="account">Already have an account?</string>
    <string name="title_activity_user_home">UserHome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_agency_home">AgencyHome</string>
    <string name="btnCreateAccount">CREATE ACCOUNT</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_list_travels">Travels List</string>
    <string name="titleBack">BACK</string>
    <string name="btnAdd">+</string>
    <string name="titleNewTravel">New Travel</string>
    <string name="edtxt_name_travel">Name</string>
    <string name="edtxt_description_travel">Description</string>
    <string name="edtxt_destination_travel">Destination</string>
    <string name="edtxt_location_exit_travel">Location exit</string>
    <string name="edtxt_location_arrive_travel">Location arrive</string>
    <string name="edtxt_start_travel">Date Start Travel</string>
    <string name="edtxt_hour_exit_travel">Hour exit</string>
    <string name="edtxt_end_travel">Date End travel</string>
    <string name="edtxt_quantity_travel">Seats Quantity</string>
    <string name="edtxt_price_travel">Price</string>
    <string name="btnCreateTravel">CREATE TRAVEL</string>
    <string name="editTravel">Edit Travel</string>
    <string name="btnUpdateTravel">UPDATE TRAVEL</string>
    <string name="subtitle_list_travels">Seleccione un viaje para editarlo</string>
</resources>