<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/background_gradient_purple">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_margin="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/logomorado" />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textAlignment="center"
            android:textSize="45sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="0dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/subtitle"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_margin="5dp"/>
        <EditText
            android:id="@+id/edtxt_usuario"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/edtxt_name_user"
            android:textColorHint="@color/white"
            android:background="@drawable/edit_text_states"
            android:inputType="text"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="20sp"
            android:autofillHints="username"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            />
        <EditText
            android:id="@+id/edtxt_pwd"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/edtxt_pwd"
            android:textAlignment="center"
            android:background="@drawable/edit_text_states"
            android:inputType="textPassword"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:autofillHints="password"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp" />
        <EditText
            android:id="@+id/edtxt_email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/edtxt_email"
            android:textAlignment="center"
            android:background="@drawable/edit_text_states"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:autofillHints="password"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp" />
        <EditText
            android:id="@+id/edtxt_telephone"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/edtxt_tel"
            android:textAlignment="center"
            android:background="@drawable/edit_text_states"
            android:inputType="number"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:autofillHints="password"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp" />
        <EditText
            android:id="@+id/edtxt_rfc"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/edtxt_rfc"
            android:textAlignment="center"
            android:background="@drawable/edit_text_states"
            android:inputType="text"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:autofillHints="RFC"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Tipo de usuario"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_margin="10dp"/>
        <RadioGroup
            android:id="@+id/roles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp">

            <RadioButton
                android:id="@+id/radio_viajero"
                android:layout_width="197dp"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="Viajero" />

            <RadioButton
                android:id="@+id/radio_agencia"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:text="Agencia" />
        </RadioGroup>

        <Button
            android:id="@+id/btnReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_button"
            android:text="@string/btnReg"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account"
            android:textAlignment="center"
            android:textSize="15sp"
            android:layout_marginTop="20dp"/>
        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_button"
            android:text="@string/btnIniciar"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>