<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AgencyEditTravel">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/background_gradient">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_margin="5dp"
                android:scaleType="fitCenter"
                android:src="@drawable/logonaranja" />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/editTravel"
            android:textAlignment="center"
            android:textSize="45sp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/edtxt_update_name_travel"
                android:layout_width="165dp"
                android:layout_height="45dp"
                android:hint="@string/edtxt_name_travel"
                android:textColorHint="@color/white"
                android:background="@drawable/edit_text_states"
                android:inputType="text"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="20sp"
                android:autofillHints="username"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="10dp"
                />
            <EditText
                android:id="@+id/edtxt_update_description_travel"
                android:layout_width="165dp"
                android:layout_height="45dp"
                android:hint="@string/edtxt_description_travel"
                android:textColorHint="@color/white"
                android:background="@drawable/edit_text_states"
                android:inputType="text"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="20sp"
                android:autofillHints="username"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="0dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Spinner
                android:id="@+id/edtxt_update_destination_travel"
                android:layout_width="165dp"
                android:layout_height="45dp"
                android:hint="@string/edtxt_destination_travel"
                android:textColorHint="@color/white"
                android:background="@drawable/edit_text_states"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="20sp"
                android:autofillHints="username"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="10dp"
                />
            <EditText
                android:id="@+id/edtxt_update_location_exit_travel"
                android:layout_width="165dp"
                android:layout_height="45dp"
                android:hint="@string/edtxt_location_exit_travel"
                android:textColorHint="@color/white"
                android:background="@drawable/edit_text_states"
                android:inputType="text"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="20sp"
                android:autofillHints="username"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="0dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/edtxt_update_location_arrive_travel"
                android:layout_width="165dp"
                android:layout_height="45dp"
                android:hint="@string/edtxt_location_arrive_travel"
                android:textColorHint="@color/white"
                android:background="@drawable/edit_text_states"
                android:inputType="textCapSentences"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="20sp"
                android:autofillHints="username"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="10dp"
                />
            <EditText
                android:id="@+id/edtxt_update_start_travel"
                android:layout_width="165dp"
                android:layout_height="45dp"
                android:hint="@string/edtxt_start_travel"
                android:textColorHint="@color/white"
                android:background="@drawable/edit_text_states"
                android:inputType="none"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="20sp"
                android:autofillHints="username"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="0dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/edtxt_update_hour_exit_travel"
                android:layout_width="165dp"
                android:layout_height="45dp"
                android:hint="@string/edtxt_hour_exit_travel"
                android:textColorHint="@color/white"
                android:background="@drawable/edit_text_states"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="20sp"
                android:autofillHints="username"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="10dp"
                />

            <EditText
                android:id="@+id/edtxt_update_end_travel"
                android:layout_width="165dp"
                android:layout_height="45dp"
                android:hint="@string/edtxt_end_travel"
                android:textColorHint="@color/white"
                android:background="@drawable/edit_text_states"
                android:inputType="none"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="20sp"
                android:autofillHints="username"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="0dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edtxt_update_quantity_travel"
                android:layout_width="165dp"
                android:layout_height="45dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="10dp"
                android:autofillHints="username"
                android:background="@drawable/edit_text_states"
                android:hint="@string/edtxt_quantity_travel"
                android:inputType="number"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edtxt_update_price_travel"
                android:layout_width="165dp"
                android:layout_height="45dp"
                android:hint="@string/edtxt_price_travel"
                android:textColorHint="@color/white"
                android:background="@drawable/edit_text_states"
                android:inputType="numberDecimal"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="20sp"
                android:autofillHints="username"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:layout_marginTop="0dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="30dp"
                android:layout_marginBottom="0dp"
                />
        </LinearLayout>

        <Button
            android:id="@+id/btnUpdateTravel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/edit_button"
            android:text="@string/btnUpdateTravel"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>